Fix scrollbar

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -60,22 +60,12 @@ img {
   width: 8px;
 }
 
-/* Track */
-::-webkit-scrollbar-track {
-  /* background-color: #f1f1f1; */
-  border-radius: 12px;
-}
-
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background-color: var(--categories-scrollbar);
   border-radius: 12px;
-}
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background-color: var(--categories-current-color);
-  transition-property: background-color;
-  transition-duration: 300ms;
-  transition-timing-function: var(--transition-timing-function);
+  &:hover {
+    background-color: var(--categories-current-color);
+  }
 }
